'Frozen autocommit 2024-12-08 22:57:21.002973'